--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
   <body>
     <h1>Chuppala Anusha - biet -22e11a05d2</h1>
     <p>Student</p>
+    <hr>
+    <h1>html-headings</h1>
+    <h2>paragraphs</h2>
+    <h3>formatting - <b>, <strong>.....</h3>
+    <h4>img - <img src=""/></h4>
+    <h5>comment <!-- comment syntax - to display the code for other developers</h5>
   </body>
 </html>
