--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <h2>paragraphs</h2>
     <h3>formatting - <b>, <strong>.....</h3>
     <h4>img - <img src=""/></h4>
-    <h5>comment <!-- comment syntax - to display the code for other developers</h5>
+    <h5>comment <!-- comment syntax - to display the code for other developers--></h5>
+    <hr>
+    <h1>Display the image using html</h1>
+    <img src="./assets/img1.jpeg" width="200px" height="200px">
+    <p>Lost in moments where sunlight meets soft shadows, and everything feels a little slower, a little softer. Every frame holds a whisper of calm — pastel skies, quiet smiles, and the kind of beauty that doesn’t ask to be noticed but still steals your breath away. ✨</p>
   </body>
 </html>
