--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>Lost in moments where sunlight meets soft shadows, and everything feels a little slower, a little softer. Every frame holds a whisper of calm — pastel skies, quiet smiles, and the kind of beauty that doesn’t ask to be noticed but still steals your breath away. ✨</p>
     <h1>unordered list</h1>
     <ul type="none">
-        <li> <img src="./assets/img3.png" width="200px" height="200px">Wheat flour is a powder made from the grinding of common wheat used for human consumption. Wheat varieties are called "soft" or "weak" if gluten content is low, and are called "hard" or "strong" if they have high gluten content. Hard flour, or bread flour, is high in gluten, with 12% to 14% gluten content, and its dough has elastic toughness that holds its shape well once baked. Soft flour is comparatively low in gluten and thus results in a loaf with a finer, crumbly texture.</li>
+        <li> <img src="./assets/img3.png" width="50px" height="50px">Wheat flour is a powder made from the grinding of common wheat used for human consumption. Wheat varieties are called "soft" or "weak" if gluten content is low, and are called "hard" or "strong" if they have high gluten content. Hard flour, or bread flour, is high in gluten, with 12% to 14% gluten content, and its dough has elastic toughness that holds its shape well once baked. Soft flour is comparatively low in gluten and thus results in a loaf with a finer, crumbly texture.</li>
         <li>milk</li>
         <li>butter</li>
         <li>sugar</li>
@@ -31,5 +31,26 @@
         <li>butter</li>
         <li>sugar</li>
     </ol>
+    <table border="1">
+        <tr>
+            <th>sno.</th>
+            <th>name</th>
+            <th>email</th>
+            <th>image</th>
+        </tr>
+        <td>
+            1.
+        </td>
+        <td>
+            Anusha
+        </td>
+        <td>
+            anusha.chuppala12@gmail.com
+        </td>
+        <td>
+            <img src="./assets/img3.png">
+        </td>
+
+    </table>
   </body>
 </html>
