--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
             anusha.chuppala12@gmail.com
         </td>
         <td>
-            <img src="./assets/img3.png">
+            <img src="./assets/img3.png" width="200px" height="200px">
         </td>
-
     </table>
+    <h1>Links</h1>
+    <a href="./home.html">home page</a>
+    <a href="./about.html">about page</a>
   </body>
 </html>
