--- a/index.html
+++ b/index.html
@@ -51,8 +51,31 @@
             <img src="./assets/img3.png" width="200px" height="200px">
         </td>
     </table>
+
     <h1>Links</h1>
     <a href="./home.html">home page</a>
-    <a href="./about.html">about page</a>
+
+    <h1>BLOCK TYPE ELEMENT</h1>
+
+    <div style="display: flex;">
+      <div style="height: 100px; background-color: black; width: 100px;"></div>
+      <div style="height: 100px; background-color: rgb(128, 0, 117); width: 100px;"></div>
+    </div>
+    <h1>title description</h1>
+    <div style="display: flex;">
+        <div style="width: 300px; height: 300px;">
+        <img src="./assets/img1.jpeg" width="250px" height="250px"><p>Wheat flour is a powder made from the grinding of common wheat used for human consumption. Wheat varieties are called "soft" or "weak" if gluten content is low, and are called "hard" or "strong" if they have high gluten content. Hard flour, or bread flour, is high in gluten, with 12% to 14% gluten content, and its dough has elastic toughness that holds its shape well once baked. Soft flour is comparatively low in gluten and thus results in a loaf with a finer, crumbly texture.</p>
+    </div>
+        <div style="width: 300px; height: 300px;">
+        <img src="./assets/img1.jpeg" width="250px" height="250px"><p>Wheat flour is a powder made from the grinding of common wheat used for human consumption. Wheat varieties are called "soft" or "weak" if gluten content is low, and are called "hard" or "strong" if they have high gluten content. Hard flour, or bread flour, is high in gluten, with 12% to 14% gluten content, and its dough has elastic toughness that holds its shape well once baked. Soft flour is comparatively low in gluten and thus results in a loaf with a finer, crumbly texture.</p>
+     </div>
+        <div style="width: 300px; height: 300px;">
+        <img src="./assets/img1.jpeg" width="250px" height="250px"><p>Wheat flour is a powder made from the grinding of common wheat used for human consumption. Wheat varieties are called "soft" or "weak" if gluten content is low, and are called "hard" or "strong" if they have high gluten content. Hard flour, or bread flour, is high in gluten, with 12% to 14% gluten content, and its dough has elastic toughness that holds its shape well once baked. Soft flour is comparatively low in gluten and thus results in a loaf with a finer, crumbly texture.</p>
+    </div>
+    <div style="width: 300px; height: 300px;">
+        <img src="./assets/img1.jpeg" width="250px" height="250px"><p>Wheat flour is a powder made from the grinding of common wheat used for human consumption. Wheat varieties are called "soft" or "weak" if gluten content is low, and are called "hard" or "strong" if they have high gluten content. Hard flour, or bread flour, is high in gluten, with 12% to 14% gluten content, and its dough has elastic toughness that holds its shape well once baked. Soft flour is comparatively low in gluten and thus results in a loaf with a finer, crumbly texture.</p>
+    </div>
+</div>
+
   </body>
 </html>
