--- a/home.html
+++ b/home.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <a href="./about.html">about page</a>
+
+    <h1>Home page</h1>
+    <audio control autoplay muted <source src="./assets/song1.mp3"></audio>
   </body>
 </html>
