--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
     <h1>title description</h1>
 <div style="display:flex">
     <div style="width: 300px">
-     <img src="./assets/img2.jpg" width="300px" height="300px" ><p>The scope of this project includes the implementation of a rule-based and sentiment-driven response mechanism, focusing on providing empathetic and supportive feedback. While the agent will not provide clinical diagnoses or therapy, it will be equipped to recognize severe distress signals and suggest resources for professional help. The expected outcome is a working prototype that effectively demonstrates how conversational AI can serve as a proactive tool in the mental health domain, offering a crucial first step for individuals who may be hesitant to approach traditional care channels.</p>
+     <img src="./assets/img2.jpg" width="300px" height="300px" ><p>Wheat flour is a powder made from the grinding of common wheat used for human consumption. Wheat varieties are called "soft" or "weak" if gluten content is low, and are called "hard" or "strong" if they have high gluten content. Hard flour, or bread flour, is high in gluten, with 12% to 14% gluten content, and its dough has elastic toughness that holds its shape well once baked. Soft flour is comparatively low in gluten and thus results in a loaf with a finer, crumbly texture.</p>
 
     </div>
     <div style="width: 300px">
-     <img src="./assets/img2.jpg" width="300px" height="300px" ><p>The scope of this project includes the implementation of a rule-based and sentiment-driven response mechanism, focusing on providing empathetic and supportive feedback. While the agent will not provide clinical diagnoses or therapy, it will be equipped to recognize severe distress signals and suggest resources for professional help. The expected outcome is a working prototype that effectively demonstrates how conversational AI can serve as a proactive tool in the mental health domain, offering a crucial first step for individuals who may be hesitant to approach traditional care channels.</p>
+     <img src="./assets/img2.jpg" width="300px" height="300px" ><p>Wheat flour is a powder made from the grinding of common wheat used for human consumption. Wheat varieties are called "soft" or "weak" if gluten content is low, and are called "hard" or "strong" if they have high gluten content. Hard flour, or bread flour, is high in gluten, with 12% to 14% gluten content, and its dough has elastic toughness that holds its shape well once baked. Soft flour is comparatively low in gluten and thus results in a loaf with a finer, crumbly texture.</p>
 
     </div>
     <div style="width: 300px">
-     <img src="./assets/img2.jpg" width="300px" height="300px" ><p>The scope of this project includes the implementation of a rule-based and sentiment-driven response mechanism, focusing on providing empathetic and supportive feedback. While the agent will not provide clinical diagnoses or therapy, it will be equipped to recognize severe distress signals and suggest resources for professional help. The expected outcome is a working prototype that effectively demonstrates how conversational AI can serve as a proactive tool in the mental health domain, offering a crucial first step for individuals who may be hesitant to approach traditional care channels.</p>
+     <img src="./assets/img2.jpg" width="300px" height="300px" ><p>Wheat flour is a powder made from the grinding of common wheat used for human consumption. Wheat varieties are called "soft" or "weak" if gluten content is low, and are called "hard" or "strong" if they have high gluten content. Hard flour, or bread flour, is high in gluten, with 12% to 14% gluten content, and its dough has elastic toughness that holds its shape well once baked. Soft flour is comparatively low in gluten and thus results in a loaf with a finer, crumbly texture.</p>
 
     </div>
     <div style="width: 300px">
-     <img src="./assets/img2.jpg" width="300px" height="300px"/><p>The scope of this project includes the implementation of a rule-based and sentiment-driven response mechanism, focusing on providing empathetic and supportive feedback. While the agent will not provide clinical diagnoses or therapy, it will be equipped to recognize severe distress signals and suggest resources for professional help. The expected outcome is a working prototype that effectively demonstrates how conversational AI can serve as a proactive tool in the mental health domain, offering a crucial first step for individuals who may be hesitant to approach traditional care channels.</p>
+     <img src="./assets/img2.jpg" width="300px" height="300px"/><p>Wheat flour is a powder made from the grinding of common wheat used for human consumption. Wheat varieties are called "soft" or "weak" if gluten content is low, and are called "hard" or "strong" if they have high gluten content. Hard flour, or bread flour, is high in gluten, with 12% to 14% gluten content, and its dough has elastic toughness that holds its shape well once baked. Soft flour is comparatively low in gluten and thus results in a loaf with a finer, crumbly texture.</p>
     </div>
 </div>  
 <h1>product list</h1>
@@ -83,19 +83,17 @@
    </div>
    <div style="width: 200px;padding-left: 30px;">
       <img src="./assets/product2.jpg" width="200px" height="200px"/>
-      <h3>samsung smart watch unique style</h3>
+      <h3>Halloween icons</h3>
    </div>
    <div style="width: 200px;padding-left: 30px;">
       <img src="./assets/product3.jpg" width="200px" height="200px"/>
-      <h3>skin care items for girls</h3>
+      <h3>fire</h3>
    </div>
    <div style="width: 200px;padding-left: 30px;">
       <img src="./assets/product4.jpg" width="200px" height="200px"/>
-      <h3>puma shoes black color</h3>
+      <h3>nykee shoe </h3>
    </div>  
 </div>      
-</body>
-</html>
 
   </body>
 </html>
