--- a/home.html
+++ b/home.html
@@ -7,8 +7,9 @@
   </head>
   <body>
     <a href="./about.html">about page</a>
-
-    <h1>Home page</h1>
-    <audio control autoplay muted <source src="./assets/song1.mp3"></audio>
+    <h1>Audio Song</h1>
+    <audio controls autoplay muted>
+      <source src="./assets/song1.mp3" type="audio/mp3" />
+    </audio>
   </body>
 </html>
