--- a/about.html
+++ b/about.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="./home.html">home page</a>
+    <a href="./index.html">index page</a>
   </body>
 </html>
