successfully completed the task!

--- a/index.html
+++ b/index.html
@@ -95,5 +95,88 @@
    </div>  
 </div>      
 
+<h1>Task 1</h1>
+    <a href="./e-commerce.html">
+      <img
+        src="./assets/e-commerce.jpg"
+        alt="product"
+        width="200px"
+        height="200px"
+      />
+    </a>
+
+    <a href="./foodDelivery.html">
+      <img
+        src="./assets/foodDelivery.jpg"
+        alt="food"
+        width="200px"
+        height="200px"
+      />
+    </a>
+
+    <a href="./travel.html">
+      <img
+        src="./assets/travel.jpg"
+        alt="travel"
+        width="200px"
+        height="200px"
+      />
+    </a>
+
+    <a href="./tech.html">
+      <img src="./assets/tech.jpg" alt="tech" width="200px" height="200px" />
+    </a>
+
+    <a href="./education.html">
+      <img
+        src="./assets/education.jpg"
+        alt="education"
+        width="200px"
+        height="200px"
+      />
+    </a>
+
+    <a href="./movie.html">
+      <img src="./assets/movie.jpg" alt="movie" width="200px" height="200px" />
+    </a>
+
+    <a href="./health.html">
+      <img
+        src="./assets/health.jpg"
+        alt="health"
+        width="200px"
+        height="200px"
+      />
+    </a>
+
+    <a href="./real-estate.html">
+      <img
+        src="./assets/realestate.jpg"
+        alt="real-estate"
+        width="200px"
+        height="200px"
+      />
+    </a>
+
+    <a href="./portfolio.html">
+      <img
+        src="./assets/portfolio.jpg"
+        alt="portfolio"
+        width="200px"
+        height="200px"
+      />
+    </a>
+
+    <a href="./gaming.html">
+      <img
+        src="./assets/gaming.jpg"
+        alt="gaming"
+        width="200px"
+        height="200px"
+      />
+    </a>
+  </body>
+</html>
+
   </body>
 </html>
